tests/rosetta/out/C/best-shuffle.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
int nextRand(int seed) { return (seed * 1664525 + 1013904223) % 2147483647; }

list_int shuffleChars(char *s, int seed) {
  list_string tmp1 = {0, NULL};
  int chars = tmp1;
  int i = 0;
  while (i < strlen(s)) {
    list_string tmp2 = list_string_create(1);
    tmp2.data[0] = slice_string(s, i, i + 1);
    list_string tmp3 = concat_list_string(chars, tmp2);
    chars = tmp3;
    i = i + 1;
  }
  int sd = seed;
  int idx = chars.len - 1;
  while (idx > 0) {
    sd = nextRand(sd);
    int j = sd % (idx + 1);
    const char *tmp = chars.data[idx];
    chars.data[idx] = chars.data[j];
    chars.data[j] = tmp;
    idx = idx - 1;
  }
  const char *res = "";
  i = 0;
  while (i < chars.len) {
    char *tmp4 = concat_string(res, chars.data[i]);
    res = tmp4;
    i = i + 1;
  }
  list_string tmp5 = list_string_create(2);
  tmp5.data[0] = res;
  tmp5.data[1] = sd;
  return tmp5;
}

list_int bestShuffle(char *s, int seed) {
  list_int r = shuffleChars(s, seed);
  int t = r.data[0];
  int sd = r.data[1];
  list_string tmp6 = {0, NULL};
  int arr = tmp6;
  int i = 0;
  while (i < t.len) {
    list_string tmp7 = list_string_create(1);
    tmp7.data[0] = slice_string(t, i, i + 1);
    list_string tmp8 = concat_list_string(arr, tmp7);
    arr = tmp8;
    i = i + 1;
  }
  i = 0;
  while (i < arr.len) {
    int j = 0;
    while (j < arr.len) {
      if (i != j && arr.data[i] != slice_string(s, j, j + 1) &&
          arr.data[j] != slice_string(s, i, i + 1)) {
        const char *tmp = arr.data[i];
        arr.data[i] = arr.data[j];
        arr.data[j] = tmp;
        break;
      }
      j = j + 1;
    }
    i = i + 1;
  }
  int count = 0;
  i = 0;
  while (i < arr.len) {
    if (arr.data[i] == slice_string(s, i, i + 1)) {
      count = count + 1;
    }
    i = i + 1;
  }
  const char *out = "";
  i = 0;
  while (i < arr.len) {
    char *tmp9 = concat_string(out, arr.data[i]);
    out = tmp9;
    i = i + 1;
  }
  list_string tmp10 = list_string_create(3);
  tmp10.data[0] = out;
  tmp10.data[1] = sd;
  tmp10.data[2] = count;
  return tmp10;
}

int main() {
  list_string ts = list_string_create(6);
  ts.data[0] = "abracadabra";
  ts.data[1] = "seesaw";
  ts.data[2] = "elk";
  ts.data[3] = "grrrrrr";
  ts.data[4] = "up";
  ts.data[5] = "a";
  int ts = ts;
  int seed = 1;
  int i = 0;
  while (i < ts.len) {
    list_int r = bestShuffle(ts.data[i], seed);
    int shuf = r.data[0];
    seed = r.data[1];
    int cnt = r.data[2];
    char *tmp11 = concat_string(ts.data[i], " -> ");
    char *tmp12 = _str(cnt);
    char *tmp13 = concat_string(ts.data[i], " -> ");
    char *tmp14 = _str(cnt);
    printf("%d\n", tmp13 + shuf + " (" + tmp14 + ")");
    i = i + 1;
  }
}

int main() {
  main();
  return 0;
}
